funcionalidad modulo de usuarios

--- a/src/main/resources/connection.dev.properties
+++ b/src/main/resources/connection.dev.properties
@@ -14,7 +14,7 @@
 db.driver.class=com.mysql.jdbc.Driver
 db.username=root
 db.password=icaeerp2016
-db.url=jdbc:mysql://localhost:3306/portal_nomina_db?createDatabaseIfNotExist=true
+db.url=jdbc:mysql://localhost:3306/icae_erp_db?createDatabaseIfNotExist=true
 
 #db.driver.class=com.mysql.jdbc.Driver
 #db.username=root
