--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.consola.layout=org.apache.log4j.PatternLayout
 log4j.appender.consola.layout.ConversionPattern=%-r %d{dd-MM-yyyy HH:mm:ss} [%t] %-5p %c %x -%m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=C:\\PortalNominaGP\\log\\portal-nomina-web.log
+log4j.appender.file.File=C:\\ADP\\log\\icae-erp-log.log
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=2
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
