--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,15 +50,15 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-<!-- 	<filter> -->
-<!-- 		<filter-name>sitemesh</filter-name> -->
-<!-- 		<filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class> -->
-<!-- 	</filter> -->
+	<filter>
+		<filter-name>sitemesh</filter-name>
+		<filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
+	</filter>
 
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>sitemesh</filter-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
+	<filter-mapping>
+		<filter-name>sitemesh</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>icae-erp-servlet</servlet-name>
@@ -76,7 +76,7 @@
 	</servlet-mapping>
 
 	<session-config>
-		<session-timeout>1</session-timeout>
+		<session-timeout>30</session-timeout>
 	</session-config>
 	
     <error-page>
