Se agrega alta y cambios de productos

--- a/src/main/resources/uttec-icae-msg.properties
+++ b/src/main/resources/uttec-icae-msg.properties
@@ -14,6 +14,8 @@ messages.success.update=La información se ha actualizado correctamente.
 messages.error=Ha ocurrido un error:
 messages.error.empty.updateinfo=Debe proporcionar al menos alguno de los siguientes datos para realizar la actualización (contraseña ó e-mail).
 messages.error.404=La página que esta buscando no se ha encontrado!!!
+messages.error.exist.rfc.empleado=Ya existe un empleado con ese RFC
+messages.error.exist.mail.empleado=Ya existe un empleado con ese MAIL
 #############
 
 Pattern.rfc = El RFC no es valido.
