--- a/pom.xml
+++ b/pom.xml
@@ -212,11 +212,24 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>ch.qos.logback</groupId> -->
-<!-- 			<artifactId>logback-classic</artifactId> -->
-<!-- 			<version>0.9.24</version> -->
-<!-- 		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>ch.qos.logback</groupId> -->
+		<!-- <artifactId>logback-classic</artifactId> -->
+		<!-- <version>0.9.24</version> -->
+		<!-- </dependency> -->
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -234,6 +247,33 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.31</version>
+		</dependency>
+		<dependency>
+			<groupId>com.certus.facturehoy.ws2.cfdi</groupId>
+			<artifactId>certus-facturehoy-ws-test</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<!-- Email -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.7</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -262,6 +302,51 @@
 						</connector>
 					</connectors>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>schema1-xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+						<configuration>
+							<schemaFiles>cfdv32.xsd</schemaFiles>
+							<packageName>com.icae.model.cfdi.v32</packageName>
+							<schemaDirectory>src/main/resources/xsd</schemaDirectory>
+							<staleFile>${project.build.directory}/generated-sources/xjc1/.staleFlag</staleFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>schema2-xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+						<configuration>
+							<schemaFiles>tfdv32.xsd</schemaFiles>
+							<packageName>com.icae.model.tfd.v32</packageName>
+							<schemaDirectory>src/main/resources/xsd</schemaDirectory>
+							<staleFile>${project.build.directory}/generated-sources/xjc2/.staleFlag</staleFile>
+							<clearOutputDir>false</clearOutputDir>
+						</configuration>
+					</execution>
+					<execution>
+						<id>schema3-xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+						<configuration>
+							<schemaFiles>nomina11.xsd</schemaFiles>
+							<packageName>com.icae.model.nomina.v32</packageName>
+							<schemaDirectory>src/main/resources/xsd</schemaDirectory>
+							<staleFile>${project.build.directory}/generated-sources/xjc3/.staleFlag</staleFile>
+							<clearOutputDir>false</clearOutputDir>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
