--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
 # Pone el logger root a nivel DEBUG y lo nombra A1.
 log4j.rootLogger=INFO, consola, file
 
-log4j.logger.com.magnabyte.nomina.portal=ERROR
 log4j.logger.org.springframework=INFO
+log4j.logger.com.uttec.icae=INFO, DEBUG, ERROR
 
 # Log JDBC bind parameter runtime arguments
 #log4j.logger.org.hibernate.type=trace
